fix: code can now actually be run with JDK 8